# stim-guard

./: README.md  pyproject.toml
docs/: VALIDATION_PROTOCOL.md
src/stim_guard/: __init__.py  axioms.py  guard.py  loops.py  result.py
